--- a/package.json
+++ b/package.json
@@ -25,13 +25,18 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/cookie-parser": "^1.4.3",
     "@types/hapi__joi": "^17.1.8",
+    "@types/passport-jwt": "^3.0.7",
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
